-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 7u281, 8u271, openjdk8u272, 11.0.9, 11.0.9-oracle, 15.0.1, 16
-
Component/s: hotspot
-
b01
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8256534 | 13.0.6 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8255941 | 13.0.5.1 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8255951 | 11.0.10 | Tobias Hartmann | P2 | Resolved | Fixed | b02 |
| JDK-8255887 | 11.0.9.1 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8255698 | openjdk8u282 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8255960 | openjdk8u275 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8257274 | emb-8u281 | Tobias Hartmann | P2 | Resolved | Fixed | team |
| JDK-8256139 | openjdk7u | Tobias Hartmann | P2 | Resolved | Fixed | master |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f2ced1badd4, pid=9384, tid=20448
#
# JRE version: Java(TM) SE Runtime Environment 18.9 (11.0.10+1) (fastdebug build 11.0.10-ea+1-LTS-12)
# Java VM: Java HotSpot(TM) 64-Bit Server VM 18.9 (fastdebug 11.0.10-ea+1-LTS-12, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x5b6dd4] MinINode::Ideal(PhaseGVN*, bool)+0x644
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S290/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fdc35ef9-0f7b-46dc-a46b-f043e1f6b8c4/runs/6302e94c-d36e-4a7b-9783-fae223baac8b/testoutput/test-support/jtreg_open_test_jdk_jdk_jdi/scratch/0/core.9384)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S290/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fdc35ef9-0f7b-46dc-a46b-f043e1f6b8c4/runs/6302e94c-d36e-4a7b-9783-fae223baac8b/testoutput/test-support/jtreg_open_test_jdk_jdk_jdi/tmp -Djava.library.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-11.0.10+1-12/linux-x64-debug.test/jdk/jtreg/native --patch-module=java.base=/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S290/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fdc35ef9-0f7b-46dc-a46b-f043e1f6b8c4/runs/6302e94c-d36e-4a7b-9783-fae223baac8b/testoutput/test-support/jtreg_open_test_jdk_jdk_jdi/patches/java.base -Djava.security.policy=file:/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S290/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fdc35ef9-0f7b-46dc-a46b-f043e1f6b8c4/runs/6302e94c-d36e-4a7b-9783-fae223baac8b/./testoutput/test-support/jtreg_open_test_jdk_jdk_jdi/jtreg.policy com.sun.javatest.regtest.agent.AgentServer -allowSetSecurityManager -port 43179 -timeoutFactor 4.0
Host: ol7-build-test-676223, AMD EPYC 7551 32-Core Processor, 8 cores, 31G, Oracle Linux Server release 7.8
Time: Thu Jul 30 21:43:07 2020 UTC elapsed time: 116.950371 seconds (0d 0h 1m 56s)
--------------- T H R E A D ---------------
Current thread (0x00007f2c88e8d000): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=20448, stack(0x00007f2cb0381000,0x00007f2cb0482000)]
Current CompileTask:
C2: 116950 1967 4 MethodEntryExitEvents::methodEntered (104 bytes)
Stack: [0x00007f2cb0381000,0x00007f2cb0482000], sp=0x00007f2cb047b830, free space=1002k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x5b6dd4] MinINode::Ideal(PhaseGVN*, bool)+0x644
V [libjvm.so+0x15a84b1] PhaseIterGVN::transform_old(Node*)+0xb1
V [libjvm.so+0x15a2724] PhaseIterGVN::optimize()+0x44
V [libjvm.so+0x12c4ddf] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xcef
V [libjvm.so+0xa263ea] Compile::optimize_loops(int&, PhaseIterGVN&, LoopOptsMode) [clone .part.425]+0x2ca
V [libjvm.so+0xa2996b] Compile::Optimize()+0xc9b
V [libjvm.so+0xa2a8cc] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xd3c
V [libjvm.so+0x82b8a1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xe1
V [libjvm.so+0xa3813d] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3fd
V [libjvm.so+0xa39388] CompileBroker::compiler_thread_loop()+0x428
V [libjvm.so+0x17fcca7] JavaThread::thread_main_inner()+0x2c7
V [libjvm.so+0x17fcfbb] JavaThread::run()+0x20b
V [libjvm.so+0x17f863a] Thread::call_run()+0x19a
V [libjvm.so+0x1504c56] thread_native_entry(Thread*)+0x106
- backported by
-
JDK-8255698 Crash in MinINode::Ideal(PhaseGVN*, bool)
-
- Resolved
-
-
JDK-8255887 Crash in MinINode::Ideal(PhaseGVN*, bool)
-
- Resolved
-
-
JDK-8255941 Crash in MinINode::Ideal(PhaseGVN*, bool)
-
- Resolved
-
-
JDK-8255951 Crash in MinINode::Ideal(PhaseGVN*, bool)
-
- Resolved
-
-
JDK-8255960 Crash in MinINode::Ideal(PhaseGVN*, bool)
-
- Resolved
-
-
JDK-8256139 Crash in MinINode::Ideal(PhaseGVN*, bool)
-
- Resolved
-
-
JDK-8256534 Crash in MinINode::Ideal(PhaseGVN*, bool)
-
- Resolved
-
-
JDK-8257274 Crash in MinINode::Ideal(PhaseGVN*, bool)
-
- Resolved
-