8250861: Crash in MinINode::Ideal(PhaseGVN*, bool)

Added missing NULL checks.

Reviewed-by: kvn, chagedorn